--- a/Image Classifier.ipynb
+++ b/Image Classifier.ipynb
@@ -37,9 +37,10 @@
         "outputId": "952dbd20-270b-4326-fe3e-62238260ba03"
       },
       "source": [
+        "!wget https://github.com/AmbiTyga/Bio-VI-BERT/blob/main/Dataset.7z\r\n",
         "!7z x /content/Dataset.7z"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +107,7 @@
         "from tez.callbacks import Callback, CallbackRunner\r\n",
         "from sklearn import metrics"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -277,7 +278,7 @@
         "      return outputs, loss, metrics\r\n",
         "    return outputs, 0, {}\r\n"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -303,7 +304,7 @@
         "      im, label = super().__getitem__(index)\r\n",
         "      return {'img':self.transforms(im),'targets':label}"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -335,7 +336,7 @@
         "test_dataset = CIFAR(DL_PATH, train=False,\r\n",
         "                                       download=True, transform=transform)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -371,7 +372,7 @@
         "    )\r\n",
         "torch.save(model.state_dict(), '/content/ViT-CIFAR10-final.bin')"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1144,7 +1145,7 @@
         "        imgs.append(os.path.join(path, name))\r\n",
         "imgs = [x for x in imgs if '.jpg' in x]"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1161,7 +1162,7 @@
         "data = pd.read_csv(\"/content/Dataset/all_meta_data.csv\")\r\n",
         "data.head()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1296,7 +1297,7 @@
         "data['img_path'] = data['img_path'].apply(check_file)\r\n",
         "data.drop(index = data[data['img_path']=='N\\A'].index,inplace = True)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1307,7 +1308,7 @@
       "source": [
         "data.to_csv('/content/Parasitesv1.csv',index=False)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1318,7 +1319,7 @@
       "source": [
         "del data"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1329,7 +1330,7 @@
       "source": [
         "data = pd.read_csv('/content/Parasitesv1.csv')"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1345,7 +1346,7 @@
         "for i in data.columns:\r\n",
         "  print(i,data[i].nunique(),sep = '->')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1373,7 +1374,7 @@
         "X = data[['phylum','genus','species','form','class','image_name','image_url','img_path']].copy()\r\n",
         "Y = data[['sample']]"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1417,7 +1418,7 @@
         "\r\n",
         "    return {'img':img,'targets':label}"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1443,7 +1444,7 @@
         "        transforms.Normalize([0.485, 0.456, 0.406], [0.229, 0.224, 0.225])\r\n",
         "    ])"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1466,7 +1467,7 @@
         "X_train, X_test, y_train, y_test = train_test_split(\r\n",
         "    X, Y, test_size=0.2, random_state=2021,stratify = Y)"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1481,7 +1482,7 @@
         "test = X_test.merge(y_test,right_index=True,left_index = True)\r\n",
         "test.to_csv('/content/test.csv',index = False)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1558,7 +1559,7 @@
         "train_dataset = SpeciesLoader('/content/train.csv',transform=train_transformer)\r\n",
         "test_dataset = SpeciesLoader('/content/test.csv',transform=val_transformer)"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1591,7 +1592,7 @@
         "model.load_state_dict(torch.load('/content/ViT-CIFAR10-final.bin'))\r\n",
         "model.nn1 = nn.Linear(64,15)"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1614,7 +1615,7 @@
         "        fp16=True,\r\n",
         "    )\r\n"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
