Created Train and Validation dataset

--- a/Data_Augmentation_and_Generation.ipynb
+++ b/Data_Augmentation_and_Generation.ipynb
@@ -29,7 +29,346 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ujyd_pmrHjQV"
+        "id": "Ujyd_pmrHjQV",
+        "outputId": "b475ad1c-d399-4c2d-8316-bf9502557509",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!wget https://raw.githubusercontent.com/AmbiTyga/Bio-VI-BERT/main/Dataset.7z\r\n",
+        "!7z x /content/Dataset.7z"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "--2021-03-17 04:46:35--  https://raw.githubusercontent.com/AmbiTyga/Bio-VI-BERT/main/Dataset.7z\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 22159364 (21M) [application/octet-stream]\n",
+            "Saving to: ‘Dataset.7z’\n",
+            "\n",
+            "Dataset.7z          100%[===================>]  21.13M   107MB/s    in 0.2s    \n",
+            "\n",
+            "2021-03-17 04:46:36 (107 MB/s) - ‘Dataset.7z’ saved [22159364/22159364]\n",
+            "\n",
+            "\n",
+            "7-Zip [64] 16.02 : Copyright (c) 1999-2016 Igor Pavlov : 2016-05-21\n",
+            "p7zip Version 16.02 (locale=en_US.UTF-8,Utf16=on,HugeFiles=on,64 bits,4 CPUs Intel(R) Xeon(R) CPU @ 2.30GHz (306F0),ASM,AES-NI)\n",
+            "\n",
+            "Scanning the drive for archives:\n",
+            "  0M Scan /content/\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                   \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b1 file, 22159364 bytes (22 MiB)\n",
+            "\n",
+            "Extracting archive: /content/Dataset.7z\n",
+            "--\n",
+            "Path = /content/Dataset.7z\n",
+            "Type = 7z\n",
+            "Physical Size = 22159364\n",
+            "Headers Size = 7630\n",
+            "Method = LZMA2:24\n",
+            "Solid = +\n",
+            "Blocks = 1\n",
+            "\n",
+            "  0%\b\b\b\b    \b\b\b\b 21% 111 - Dataset/Cryptosporidium/Cryptosporidium_sp5.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                          \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 40% 202 - Dataset/Echinococcus/EchinococcusCellNetix_D.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                           \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 58% 308 - Dataset/Giardia/Giardia_troph_tric.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                 \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 74% 391 - Dataset/Plasmodium/Pk_schizont_thin_NY3.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                      \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 89% 507 - Dataset/Sarcocystis/Sarcocystis_DIC2_400x.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                        \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\bEverything is Ok\n",
+            "\n",
+            "Folders: 23\n",
+            "Files: 601\n",
+            "Size:       26736239\n",
+            "Compressed: 22159364\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XvnR57p_gmWy"
+      },
+      "source": [
+        "import pandas as pd\r\n",
+        "from sklearn.model_selection import train_test_split\r\n",
+        "import os\r\n",
+        "\r\n",
+        "import torchvision\r\n",
+        "from PIL import Image"
+      ],
+      "execution_count": 39,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JB6vuTg5hB8v"
+      },
+      "source": [
+        "data = pd.read_excel(\"/content/Dataset/all_meta_data.xlsx\")"
+      ],
+      "execution_count": 78,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r-3DrjVFhv8a"
+      },
+      "source": [
+        "data['phylum'] = data['phylum'].replace({'Roundworms':'Nematoda','Flatworm':'Platyhelminthes'})\r\n",
+        "data['class'] = data['class'].replace({'\\tConoidasida':'Conoidasida','Tapeworms':'Cestoda'})\r\n",
+        "data['species'] = data['species'].replace({'Ancyclostoma sp.':'Ancyclostoma sp.','Entamoeba histolytica]':'Entamoeba histolytica'})\r\n",
+        "data['form'] = data['form'].replace({'rings':'trophozoites','decorticated egg':'egg'})\r\n",
+        "data['sample'] = data['sample'].replace({'intestinal tissue':'intestine', 'intestine':'intestine'})"
+      ],
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NGRo1k4ihHKW"
+      },
+      "source": [
+        "data = [x for _,x in data.groupby('species') if len(x)>12]\r\n",
+        "\r\n",
+        "data = pd.concat(data,ignore_index=True)\r\n",
+        "data['species'] = data['species'].str.replace('.','')\r\n"
+      ],
+      "execution_count": 80,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "elOuhijWjpIe"
+      },
+      "source": [
+        "!rm -r train val"
+      ],
+      "execution_count": 77,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EYkWg6IvgyPb",
+        "outputId": "fde15adf-fc56-4a0f-99ba-63fc48ef4f7f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "data['species'].value_counts()"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Plasmodium malariae          37\n",
+              "Cyclospora cayetanensis      37\n",
+              "Entamoeba histolytica        36\n",
+              "Ascaris lumbricoides         36\n",
+              "Plasmodium vivax             36\n",
+              "Giardia duodenalis           36\n",
+              "Plasmodium falciparum        36\n",
+              "Plasmodium ovale             34\n",
+              "Strongyloides stercoralis    22\n",
+              "Dibothriocephalus latus      21\n",
+              "Trichuris Trichuria          19\n",
+              "Enterobius vermicularis      18\n",
+              "Toxocara canis               17\n",
+              "Ancyclostoma sp              17\n",
+              "Sarcocystis sp               16\n",
+              "Cryptosporidium sp           16\n",
+              "Plasmodium knowlesi          15\n",
+              "Hymenolepis nana             14\n",
+              "Toxoplasma gondii            13\n",
+              "Trichinella sp               13\n",
+              "Name: species, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yvJDPeERhgsA"
+      },
+      "source": [
+        "train, val = train_test_split(\r\n",
+        "    data, test_size=0.25, random_state=2021,stratify = data['species'])"
+      ],
+      "execution_count": 81,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uAfIwDvXikB4"
+      },
+      "source": [
+        "\r\n",
+        "for path in data['species'].unique():\r\n",
+        "  os.makedirs(f\"/content/train/{path}\")\r\n",
+        "\r\n",
+        "\r\n",
+        "for path in data['species'].unique():\r\n",
+        "  os.makedirs(f\"/content/val/{path}\")"
+      ],
+      "execution_count": 82,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bT_WhR_7iftq"
+      },
+      "source": [
+        "t = []\r\n",
+        "t.append(torchvision.transforms.Compose([\r\n",
+        "        torchvision.transforms.GaussianBlur(5),\r\n",
+        "        torchvision.transforms.RandomPerspective(p=1)]))\r\n",
+        "\r\n",
+        "t.append(torchvision.transforms.Compose([\r\n",
+        "        torchvision.transforms.GaussianBlur(5),\r\n",
+        "        torchvision.transforms.RandomVerticalFlip(p=1)]))\r\n",
+        "\r\n",
+        "\r\n",
+        "t.append(torchvision.transforms.Compose([\r\n",
+        "        torchvision.transforms.Grayscale(3),\r\n",
+        "        torchvision.transforms.RandomVerticalFlip(p=1)]))\r\n",
+        "\r\n",
+        "t.append(torchvision.transforms.Compose([\r\n",
+        "        torchvision.transforms.Grayscale(3),\r\n",
+        "        torchvision.transforms.RandomPerspective(p=1)]))"
+      ],
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WSjXpnmKh9tK"
+      },
+      "source": [
+        "def transform_save(data,index,folder):\r\n",
+        "  img = Image.open(data[8])\r\n",
+        "  images = [img]\r\n",
+        "  images.extend((T(img) for T in t))\r\n",
+        "  for i, image in enumerate(images):\r\n",
+        "    image.convert('RGB').save(f\"/content/{folder}/{data[3]}/T_{i}_{index}.jpg\")\r\n",
+        "  values = [[data[0],data[1],data[2],data[3],data[4],data[5],f\"/content/{data[3]}/T_{i}_{index}.jpg\"] for i in range(len(images))]\r\n",
+        "  return values\r\n",
+        "\r\n",
+        "def get_dataframe(dataframe,folder = 'train'):\r\n",
+        "  new = []\r\n",
+        "  for i in dataframe.index:\r\n",
+        "    new.extend(transform_save(dataframe.loc[i,:].values,index =i,folder=folder))\r\n",
+        "  return pd.DataFrame(new,columns=['phylum','class','genus','species','form','sample','img_path'])"
+      ],
+      "execution_count": 88,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P2dhnhkbi2YD"
+      },
+      "source": [
+        "train = get_dataframe(train)"
+      ],
+      "execution_count": 89,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M2NhlqOwjQus"
+      },
+      "source": [
+        "val = get_dataframe(val,folder = 'val')"
+      ],
+      "execution_count": 90,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2L4PsAnAjccE"
+      },
+      "source": [
+        "train.to_csv('/content/train/train.csv',index = False)\r\n",
+        "val.to_csv('/content/val/val.csv',index = False)"
+      ],
+      "execution_count": 91,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WIcm-djqkERM",
+        "outputId": "73f6ab70-3353-46b9-bb6c-bfc9bdd25c22",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "!7z a Train.7z train\r\n",
+        "!7z a Val.7z val"
+      ],
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "7-Zip [64] 16.02 : Copyright (c) 1999-2016 Igor Pavlov : 2016-05-21\n",
+            "p7zip Version 16.02 (locale=en_US.UTF-8,Utf16=on,HugeFiles=on,64 bits,4 CPUs Intel(R) Xeon(R) CPU @ 2.30GHz (306F0),ASM,AES-NI)\n",
+            "\n",
+            "Scanning the drive:\n",
+            "  0M Scan \b\b\b\b\b\b\b\b\b\b          \b\b\b\b\b\b\b\b\b\b21 folders, 1831 files, 23281291 bytes (23 MiB)\n",
+            "\n",
+            "Creating archive: Train.7z\n",
+            "\n",
+            "Items to compress: 1852\n",
+            "\n",
+            "  0%\b\b\b\b    \b\b\b\b  5% 171 + train/Ascaris lumbricoides/T_3_51.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 11% 301 + train/Cyclospora cayetanensis/T_1_82.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                   \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 18% 433 + train/Dibothriocephalus latus/T_2_108.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                    \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 24% 508 + train/Entamoeba histolytica/T_1_129.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                  \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 29% 552 + train/Entamoeba histolytica/T_2_152.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                  \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 35% 591 + train/Entamoeba histolytica/T_4_132.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                  \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 40% 665 + train/Enterobius vermicularis/T_3_178.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                    \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 46% 755 + train/Giardia duodenalis/T_2_211.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                               \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 51% 822 + train/Hymenolepis nana/T_0_226.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                             \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 57% 950 + train/Plasmodium falciparum/T_3_236.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                  \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 63% 1099 + train/Plasmodium malariae/T_1_306.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                 \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 68% 1253 + train/Plasmodium ovale/T_2_328.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                              \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 73% 1387 + train/Plasmodium vivax/T_2_370.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                              \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 79% 1509 + train/Sarcocystis sp/T_4_396.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                            \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 85% 1586 + train/Strongyloides stercoralis/T_4_416.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                       \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 89% 1678 + train/Toxoplasma gondii/T_1_455.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                               \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 94% 1759 + train/Trichinella sp/T_4_469.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                            \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "Files read from disk: 1831\n",
+            "Archive size: 20653102 bytes (20 MiB)\n",
+            "Everything is Ok\n",
+            "\n",
+            "7-Zip [64] 16.02 : Copyright (c) 1999-2016 Igor Pavlov : 2016-05-21\n",
+            "p7zip Version 16.02 (locale=en_US.UTF-8,Utf16=on,HugeFiles=on,64 bits,4 CPUs Intel(R) Xeon(R) CPU @ 2.30GHz (306F0),ASM,AES-NI)\n",
+            "\n",
+            "Scanning the drive:\n",
+            "  0M Scan \b\b\b\b\b\b\b\b\b\b          \b\b\b\b\b\b\b\b\b\b21 folders, 616 files, 7306671 bytes (7136 KiB)\n",
+            "\n",
+            "Creating archive: Val.7z\n",
+            "\n",
+            "Items to compress: 637\n",
+            "\n",
+            "  0%\b\b\b\b    \b\b\b\b 17% 164 + val/Entamoeba histolytica/T_1_128.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 35% 243 + val/Giardia duodenalis/T_2_187.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                             \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 53% 379 + val/Plasmodium malariae/T_2_302.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                              \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 71% 521 + val/Strongyloides stercoralis/T_1_420.jpg\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                                                    \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b 91% 616 + val/val.csv\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b                      \b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\b\n",
+            "Files read from disk: 616\n",
+            "Archive size: 6662034 bytes (6506 KiB)\n",
+            "Everything is Ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5sape2Dolcwc"
       },
       "source": [
         ""
